--- a/package.json
+++ b/package.json
@@ -1,57 +1,28 @@
 {
-  "name": "ssr-window-src",
-  "version": "4.0.2",
-  "description": "Better handling for window object in SSR environment",
-  "scripts": {
-    "build:dev": "tsc --declarationDir build/types --emitDeclarationOnly --declaration true && NODE_ENV=development node ./scripts/build",
-    "build:prod": "tsc --declarationDir package/types --emitDeclarationOnly --declaration true && NODE_ENV=production node ./scripts/build",
-    "serve": "serve",
-    "lint": "eslint --ext .js,.ts,.tsx .",
-    "prettier": "prettier \"**/*.+(js|json|scss)\"",
-    "format": "npm run prettier -- --write",
-    "check-format": "npm run prettier -- --list-different",
-    "test": "node ./test/test.mjs",
-    "validate": "npm-run-all --parallel test check-format lint",
-    "release": "npm run validate && node ./scripts/release",
-    "changelog": "npx conventional-changelog -p angular -i CHANGELOG.md -u -s"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nolimits4web/ssr-window.git"
-  },
-  "keywords": [
-    "ssr",
-    "window",
-    "document"
-  ],
-  "author": "Vladimir Kharlampidi",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/nolimits4web/ssr-window/issues"
-  },
-  "homepage": "https://github.com/nolimits4web/ssr-window",
-  "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.0.2",
-    "@rollup/plugin-typescript": "^8.2.3",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
-    "domino": "^2.1.6",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "exec-sh": "^0.3.4",
-    "husky": "^5.0.9",
-    "inquirer": "^7.3.3",
-    "jsdom": "^16.4.0",
-    "lint-staged": "^10.5.4",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
-    "rollup": "^2.53.3",
-    "serve": "^11.3.2",
-    "terser": "^5.7.1",
-    "typescript": "^4.3.5"
-  },
-  "dependencies": {}
+	"name": "ssr-window",
+	"version": "4.0.2",
+	"description": "Better handling for window object in SSR environment",
+	"main": "./ssr-window.umd.js",
+	"module": "./ssr-window.umd.js",
+	"exports": {
+		"./package.json": "./package.json",
+		".": "./ssr-window.umd.js"
+	},
+	"typings": "types/ssr-window.d.ts",
+	"type": "module",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/nolimits4web/ssr-window.git"
+	},
+	"keywords": [
+		"ssr",
+		"window",
+		"document"
+	],
+	"author": "Vladimir Kharlampidi",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/nolimits4web/ssr-window/issues"
+	},
+	"homepage": "https://github.com/nolimits4web/ssr-window"
 }
